# benchmark-games-task

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.docker/mysql/: my.cnf
insomnia/: Insomnia_2024-11-07.json
src/: main.py
src/config/: database.py
src/config/enums/: report_link_enums.py  user_warning_enums.py
src/database/: models.py
src/database/repositories/aggregator/: __init__.py  aggregator.py  repository.py
src/database/repositories/game/: game.py  repository.py
src/database/repositories/player/: __init__.py  player.py  repository.py
src/database/repositories/prediction/: __init__.py  prediction.py  repository.py
src/database/repositories/prediction_report/: repository.py
src/database/repositories/profile_match/: __init__.py  profile_match.py  repository.py
src/database/repositories/profile_match_calculator/: repository.py
src/database/repositories/profile_match_calculator_config/: repository.py
src/database/repositories/profile_match_calculator_function/: repository.py
src/database/repositories/report/: __init__.py  report.py  repository.py
src/database/repositories/report_link/: repository.py
src/database/repositories/user_warning/: __init__.py  repository.py  user_warning.py
src/dependencies/alembic/: env.py
src/dependencies/alembic/versions/: 80d67dfeca8b_init_migration.py  8b5eb353fc3d_update_tables.py  ffd61b103167_update_tables_v2.py
src/routers/: __init__.py  filters.py  reports.py
