[tool.poetry]
name = "benchmark-games-task"
version = "0.1.0"
description = ""
authors = ["Bence Tabori <tabori.bence.it@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.30.6"
fastapi = "0.114.2"
pydantic = "2.9.1"
sqlmodel = "0.0.22"
sqlalchemy = "2.0.35"
python-multipart = "0.0.12"
alembic = "1.13.3"
chardet = "5.2.0"
requests = "2.32.3"
mysqlclient = "^2.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
